commit home page et css

--- a/gallerie.html
+++ b/gallerie.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+    <title>Gallerie Zuckerberg</title>
 </head>
 <body>
-    
+    <nav class="navigateur">
+        <ul>
+            <a href="#">Accueil</a>
+            <a href="#">Compétences</a>
+            <a href="#">Contact</a>
+            <a href="#">Galerie</a>
+
+        </ul>
+    </nav>
+
+
+
+
+
+    <footer class="footer">
+
+        <ul>
+            <a href="#">Accueil</a>
+            <a href="#">Compétences</a>
+            <a href="#">Contact</a>
+            <a href="#">Galerie</a>
+        </ul>
+        <div class="noms">
+            <span class="footer_span">&copy; Jules Routier et Joaquim Sandler</span>
+            <span class="footer_span">Matricule respectif: JR: JS: 20308512</span>
+        </div>
+        
+
+    </footer>
 </body>
 </html>
