--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Marc Zuckerberg</title>
+    <title>Zuckerberg Homepage</title>
 </head>
 <body>
 
@@ -13,7 +13,7 @@
             <a href="#">Accueil</a>
             <a href="#">Compétences</a>
             <a href="#">Contact</a>
-            <a href="#">Galerie</a>
+            <a href="gallerie.html">Galerie</a>
 
         </ul>
     </nav>
@@ -35,8 +35,35 @@
     <div class="corps">
 
         <div class="bio">
+            <h3>Fast facts</h3>
             <span>Mark Elliot Zuckerberg, né le 14 mai 1984 à White Plains dans l'État de New York, est un informaticien, chef d'entreprise et milliardaire américain. Il est le principal cofondateur du site et réseau social Facebook en 2004. Mark Zuckerberg est actuellement un actionnaire important et le dirigeant du Groupe Meta. En 2023, le magazine Forbes le classe 16e fortune mondiale, estimée à 106 milliards de dollars. Très souvent qualifié de « génie de l'informatique », il programme sa première messagerie web entre 10 et 12 ans.</span>
         </div>
+
+        <div class="Carrière">
+            <h3>Carrière</h3>
+            <span></span>
+        </div>
+
+        <div class = "Facebook">
+            <h3>Facebook</h3>
+            <span>La première version de Facebook est lancée le 4 février 2004 avec l'aide de Dustin Moskovitz, Eduardo Saverin et Chris Hughes10. Mark Zuckerberg est daltonien, mais la couleur bleue est celle qu'il voit le mieux. C'est donc celle qu'il a choisie pour représenter son site11. Le succès est immédiat auprès des autres élèves de l'université. L’accès est graduellement autorisé à d'autres universités (principalement de l'Ivy League), puis aux écoles du secondaire, et enfin au grand public. Le succès est partout au rendez-vous.</span>
+        </div>
+
+        <div class="informatique">
+            <h3>Informatique</h3>            
+            <span>Mark Zuckerberg a appris à coder peu de temps après avoir reçu son premier ordinateur alors qu'il était en sixième année. Zuckerberg s'est immédiatement intéressé au codage, se tournant finalement vers C++ pour les Nuls pour apprendre la programmation en autodidacte.
+                <br>Au cours de sa deuxième année à Harvard, il a écrit un programme qu'il a appelé CourseMatch, qui permettait aux utilisateurs de prendre des décisions de sélection de cours en fonction des choix des autres étudiants et de les aider à former des groupes d'étude. Plus tard, il a créé un autre programme qu'il a initialement appelé Facemash et qui permettait aux étudiants de sélectionner la plus belle personne parmi un choix de photos.
+                <br>En 2006, Zuckerberg a abandonné le codage pour se concentrer sur la gestion de l'entreprise Facebook. Lors d'une visite au Nigéria en août 2016, il a admis publiquement que renoncer au codage pour gérer son entreprise était "un peu triste". "Il y a une élégance dans l'écriture de code qui me manque", a déclaré Zuckerberg lors d'une séance de questions-réponses avec des entrepreneurs et des développeurs technologiques à Lagos, au Nigéria. "Le code fait toujours ce que vous voulez - et les gens ne le font pas".</span>
+
+        </div>
+
+        <div class="fortune">
+            <h3>Fortune</h3>
+            <span>Selon le magazine Forbes, sa fortune personnelle est estimée à 106 milliards de dollars américains en 2023. Il est donc en huitième place sur la liste des milliardaires américains et en seizième place sur la liste des milliardaires du monde de Forbes36,37.<br> Début octobre 2024, sa fortune dépasse pour la première fois les 200 milliards de dollars, et il rentre dans le top 3 des personnes les plus riches du monde, au coude à coude avec Jeff Bezos et Larry Ellison, tous trois largement devancés par Elon Musk (environ 265 milliards de patrimoine personnel).</span>
+
+        </div>
+
+    
 
 
 
@@ -51,7 +78,7 @@
             <a href="#">Accueil</a>
             <a href="#">Compétences</a>
             <a href="#">Contact</a>
-            <a href="#">Galerie</a>
+            <a href="gallerie.html">Galerie</a>
 
         </ul>
         <div class="noms">
