Bientot fini index

--- a/gallerie.html
+++ b/gallerie.html
@@ -8,27 +8,26 @@
     <title>Gallerie Zuckerberg</title>
 </head>
 <body>
+
     <nav class="navigateur">
         <ul>
-            <a href="#">Accueil</a>
+            <a href="index.html">Accueil</a>
             <a href="#">Compétences</a>
             <a href="#">Contact</a>
-            <a href="#">Galerie</a>
+            <a href="gallerie.html">Galerie</a>
 
         </ul>
     </nav>
 
 
-
-
-
     <footer class="footer">
 
         <ul>
-            <a href="#">Accueil</a>
+            <a href="index.html">Accueil</a>
             <a href="#">Compétences</a>
             <a href="#">Contact</a>
-            <a href="#">Galerie</a>
+            <a href="gallerie.html">Galerie</a>
+
         </ul>
         <div class="noms">
             <span class="footer_span">&copy; Jules Routier et Joaquim Sandler</span>
