--- a/gallerie.html
+++ b/gallerie.html
@@ -24,25 +24,26 @@
 
     <div class="gallerie">
 
-        <figure> 
-            <div class="gallerie-item"><img class="rangee_1" src="images/Gallerie_2.jpg" width="390px" height="220px" alt="Marc Zuckerberg with glasses"></div>
-            <figcaption>Le casque de réalité virtuelle "Meta Quest 3" (10 Oct 2023)</figcaption>
-        </figure>
-        <figure>
-            <div class="gallerie-item"><img class="rangee_1" src="images/Gallerie_3.jpg" width="390px" height="220px"alt="Marc Zuckerberg with glasses"></div>
-            <figcaption>Les lunnetes de réalité augmentée "Orion" (25 Sep. 2024)</figcaption>
-        </figure>
-        <figure>
-            <div class="gallerie-item"><img class="rangee_1" src="images/Gallerie_8.jpg" width="390px" height="220px"alt="Marc Zuckerberg with glasses"></div>
-            <figcaption>Le casque de réalité virtuelle "Oculus Rift" (29 Mar 2021)</figcaption>
-        </figure>
+        <div class="gallerie-item">
+            <img class="rangee_1" src="images/Gallerie_2.jpg" width="390px" height="220px" alt="Marc Zuckerberg with glasses">
+            <div class="overlay">Le casque de réalité virtuelle "Meta Quest 3" (10 Oct 2023)</div>
+        </div>
+        <div class="gallerie-item">
+            <img class="rangee_1" src="images/Gallerie_3.jpg" width="390px" height="220px"alt="Marc Zuckerberg with glasses">
+            <div class="overlay">Les lunnetes de réalité augmentée "Orion" (25 Sep. 2024)</div>
+        </div>
+        <div class="gallerie-item">
+            <img class="rangee_1" src="images/Gallerie_8.jpg" width="390px" height="220px"alt="Marc Zuckerberg with glasses">
+            <div class="overlay">Le casque de réalité virtuelle "Oculus Rift" (29 Mar 2021)</div>
+        </div>
+
         
-        <div class="gallerie-item"><img src="images/Gallerie_11.webp" width="390px" height="220px"alt="Marc Zuckerberg with glasses"></div>
-        <div class="gallerie-item"><img src="images/Gallerie_12.jpg" width="390px" height="220px"alt="Marc Zuckerberg with glasses"></div>
-        <div class="gallerie-item"><img src="images/Gallerie_9.webp" width="390px" height="220px"alt="Marc Zuckerberg with glasses"></div>
+        <img class="rond_image" src="images/Gallerie_11.webp" width="390px" height="220px"alt="Marc Zuckerberg with glasses">
+        <img class="arrondi_image" src="images/Gallerie_12.jpg" width="390px" height="220px"alt="Marc Zuckerberg with glasses">
+        <img class="carre_image" src="images/Gallerie_9.webp" width="390px" height="220px"alt="Marc Zuckerberg with glasses">
 
         <div class="gallerie-item"><img src="images/Gallerie_6.jpg" width="340px" height="220px" alt="Marc Zuckerberg with glasses"></div>
-        <div class="gallerie-item"><img src="images/Gallerie_7.png" width="340px" height="220px"alt="Marc Zuckerberg with glasses"></div>
+        <div class="gallerie-item"><img src="images/Gallerie_7.png" width="275px" height="220px"alt="Marc Zuckerberg with glasses"></div>
         <div class="gallerie-item"><img src="images/Gallerie_4.webp" width="340px" height="220px" alt="Marc Zuckerberg with glasses"></div>
         
         <div class="gallerie-item"><img src="images/Gallerie_14.png" width="390px" height="220px"alt="Marc Zuckerberg with glasses"></div>
