--- a/gallerie.html
+++ b/gallerie.html
@@ -12,8 +12,8 @@
     <nav class="navigateur">
         <ul>
             <a href="index.html">Accueil</a>
-            <a href="#">Compétences</a>
-            <a href="#">Contact</a>
+            <a href="competences.html">Compétences</a>
+            <a href="contact.html">Contact</a>
             <a href="gallerie.html">Galerie</a>
 
         </ul>
@@ -21,6 +21,7 @@
 
     <h1 class = "title" style="color: white;">Gallerie Zuckerberg</h1>
 
+    <h3 class="description_gallerie">Marc Zuckerberg est certes connu pour Facebook, mais avant tout pour ses lunettes hors-pair... <br> Admirez notre sélection de ses meilleures monture:</h3>
 
     <div class="gallerie">
 
@@ -66,8 +67,8 @@
 
         <ul>
             <a href="index.html">Accueil</a>
-            <a href="#">Compétences</a>
-            <a href="#">Contact</a>
+            <a href="competences.html">Compétences</a>
+            <a href="contact.html">Contact</a>
             <a href="gallerie.html">Galerie</a>
 
         </ul>
