--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav class="navigateur">
         <ul>
             <a href="index.html">Accueil</a>
-            <a href="#">Compétences</a>
-            <a href="#">Contact</a>
+            <a href="competences.html">Compétences</a>
+            <a href="contact.html">Contact</a>
             <a href="gallerie.html">Galerie</a>
 
         </ul>
@@ -102,8 +102,8 @@
 
         <ul>
             <a href="index.html">Accueil</a>
-            <a href="#">Compétences</a>
-            <a href="#">Contact</a>
+            <a href="competences.html">Compétences</a>
+            <a href="contact.html">Contact</a>
             <a href="gallerie.html">Galerie</a>
 
         </ul>
