--- a/compétences.html
+++ b/compétences.html
@@ -13,7 +13,7 @@
         <ul>
             <a href="index.html">Accueil</a>
             <a href="compétences.html">Compétences</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
             <a href="gallerie.html">Galerie</a>
 
         </ul>
@@ -21,7 +21,7 @@
     
     <div class="corps">
 
-        <h2 class="titre_compétence">Compétances</h2>
+        <h2 class="titre_compétence">Compétences</h2>
         <p>Mark Zuckerberg fait parti des plus grands entrepreneurs de ce monde. Il a atteint ce succés grâce à ses compétence en informatique et en leadership.</p>
         
         <h3>Parcour scolaire</h3>
@@ -71,8 +71,8 @@
 
         <ul>
             <a href="index.html">Accueil</a>
-            <a href="#">Compétences</a>
-            <a href="#">Contact</a>
+            <a href="compétences.html">Compétences</a>
+            <a href="contact.html">Contact</a>
             <a href="gallerie.html">Galerie</a>
 
         </ul>
