--- a/gallerie.html
+++ b/gallerie.html
@@ -12,10 +12,8 @@
     <nav class="navigateur">
         <ul>
             <a href="index.html">Accueil</a>
-            <a href="competences.html">Compétences</a>
-            <a href="contact.html">Contact</a>
             <a href="compétences.html">Compétences</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
             <a href="gallerie.html">Galerie</a>
 
         </ul>
@@ -70,7 +68,7 @@
 
         <ul>
             <a href="index.html">Accueil</a>
-            <a href="competences.html">Compétences</a>
+            <a href="compétences.html">Compétences</a>
             <a href="contact.html">Contact</a>
             <a href="gallerie.html">Galerie</a>
 
