--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navigateur">
         <ul>
             <a href="index.html">Accueil</a>
-            <a href="competences.html">Compétences</a>
+            <a href="compétences.html">Compétences</a>
             <a href="contact.html">Contact</a>
             <a href="gallerie.html">Galerie</a>
 
@@ -102,7 +102,7 @@
 
         <ul>
             <a href="index.html">Accueil</a>
-            <a href="competences.html">Compétences</a>
+            <a href="compétences.html">Compétences</a>
             <a href="contact.html">Contact</a>
             <a href="gallerie.html">Galerie</a>
 
