--- a/gallerie.html
+++ b/gallerie.html
@@ -22,7 +22,7 @@
 
     <h1 class = "title" style="color: white;">Gallerie Zuckerberg</h1>
 
-    <h3 class="description_gallerie">Marc Zuckerberg est certes connu pour Facebook, mais avant tout pour ses lunettes hors-pair... <br> Admirez notre sélection de ses meilleures monture:</h3>
+    <h3 class="description">Marc Zuckerberg est certes connu pour Facebook, mais avant tout pour ses lunettes hors-pair... <br> Admirez notre sélection de ses meilleures monture:</h3>
 
     <div class="gallerie">
 
