--- a/compétences.html
+++ b/compétences.html
@@ -1,3 +1,9 @@
+<!--------
+Joaquim Sandler-Soussy, Matricule: 20308512
+Jules Routier, Matricule: 20294296
+-------->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +35,7 @@
 
         <div class="informatique">
             <h3>Compétences  en Informatique</h3>
-            <ul class="premiere_liste">
+            <ul class="premiere_lettre">
                 <li>Programation en plusieurs type de langages : PHP, C++, Hack (langage de programmation impératif créé par facebook) </li>
                 <li>Développement logiciel</li>
                 <li>Algorithmes pour la gestion de données</li>
@@ -46,7 +52,7 @@
 
         <div class="leadership">
             <h3>Compétences en leadership</h3>
-            <ol>
+            <ol class="premiere_lettre">
                 <li>Gestion d'entreprise</li>
                 <li>Innovation technologiques</li>
                 <li>Modernisation constante de la façon de travailler </li>
@@ -56,7 +62,7 @@
 
         <div class="personnel">
             <h3>Compétences personnelles </h3>
-            <ul>
+            <ul class="premiere_lettre">
                 <li>Visionnaire dans son domaine</li>
                 <li>Résolutions de problèmes complexes dans ses projets</li>
                 <li>Convictions dans ses ambitions </li>
@@ -75,8 +81,8 @@
 
         </ul>
         <div class="noms">
-            <span class="footer_span">&copy; Jules Routier et Joaquim Sandler</span>
-            <span class="footer_span">Matricule respectif: JR: JS: 20308512</span>
+            <span class="footer_span">&copy; Jules Routier et Joaquim Sandler-Soussy</span>
+            <span class="footer_span">Matricule respectif: JR: 20294296 JS: 20308512</span>
         </div>
     </footer>
 
