--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--------
+Joaquim Sandler-Soussy, Matricule: 20308512
+Jules Routier, Matricule: 20294296
+-------->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -108,8 +114,8 @@
 
         </ul>
         <div class="noms">
-            <span class="footer_span">&copy; Jules Routier et Joaquim Sandler</span>
-            <span class="footer_span">Matricule respectif: JR: JS: 20308512</span>
+            <span class="footer_span">&copy; Jules Routier et Joaquim Sandler-Soussy</span>
+            <span class="footer_span">Matricule respectif: JR: 20294296 JS: 20308512</span>
         </div>
         
 
